[tool.poetry]
name = "311"
version = "0.1.0"
description = ""
authors = ["Hyperskill Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"

# GitHub dependencies
stepic-common = { url = "https://github.com/StepicOrg/stepik-common/archive/1.0.0.zip#egg=stepic-common==1.0.0" }
stepic-utils = { url = "https://github.com/hyperskill/stepik-utils/archive/1.3.0.zip#egg=stepic-utils==1.3.0" }
stepic-bioinformatics = { url = "https://github.com/StepicOrg/stepik-bioinformatics/archive/1.0.0.zip#egg=stepic-bioinformatics==1.0.0" }

# Libraries
sympy = "1.13.3"
numpy = "1.26.4"
scipy = "1.13.1"
pandas = "2.2.3"
lxml = "5.3.0"
hypothesis = "6.116.0"
toolz = "1.0.0"
Cython = "3.0.11"  # Cython is required by scikit-image
matplotlib = "3.9.2"
networkx = "3.4.2"
scikit-image = "0.24.0"
scikit-learn = "1.5.2"
rsa = "4.9"  # rsa to check encrypted tokens
nltk = "3.9.1"  # natural language processing
pymorphy2 = "0.9.1"
pymystem3 = "0.2.0"
sumy = "0.11.0"
gensim = "4.3.3"
fasttext = "0.9.3"

# big data specialization
apache-airflow = "2.10.3"

mip = "1.15.0"
shapely = "2.0.6"
pycosat = "0.6.6"

myhdl = "0.11.49"

# Hyperskill
django = "5.1.3"
beautifulsoup4 = "4.12.3"

# Stepik Academy
djangorestframework = "3.15.2"
factory_boy = "3.3.1"

opencv-python-headless = "4.10.0.84"

pysqlite3-binary = "0.5.4"

# required by admin quiz
pytest = "8.3.3"
requests = "2.32.3"

# required by sql challenge
mysqlclient = "2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
